# StarEngine

./: CMakeLists.txt  deps-CMakeLists.txt
include/: CMakeLists.txt  core.h  datacache.h  debug.h  gfx.h  gfx_shared.h  noncopyable.h  referencetracker.h  se_gfx.h  se_gfx_shared.h  se_texture.h  surface.h  texture.h
src/: CMakeLists.txt  core.cpp  datacache.cpp  gfx.cpp  main.cpp  referencetracker.cpp  texture.cpp
